[metadata]
name = autotui
version = 0.4.7
description = "quickly create UIs to interactively prompt, validate, and persist python objects to disk (JSON/YAML) and back using type hints"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/autotui
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = data prompt namedtuple

[options]
packages = find:
install_requires =
    PyYAML>=6.0
    click>=8.0
    dateparser>=1.1.0
    prompt-toolkit>=3.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests*
include =
    autotui

[options.extras_require]
edit =
    click
json =
    orjson
optional =
    click
    orjson
    pyfzf-iter
pick =
    pyfzf-iter
testing =
    flake8
    mypy
    pytest

[options.package_data]
autotui = py.typed

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[flake8]
ignore = E501,E402,W503,E266,E203
per-file-ignores =
    autotui/__init__.py:F401
    autotui/typehelpers.py:E721

[tool:pytest]
addopts =
    --doctest-modules autotui
    ./tests/
